<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    tools:context=".ui.loginActivity.ForgotPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/userNameForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/enter_username_resource"
        android:inputType="text"
        android:padding="16dp"
        android:layout_margin="20dp"
        android:textColor="@color/login_form_details"
        android:textColorHint="@color/login_form_details_medium"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_name_of_your_first_pet_security_question_resource"
        android:textSize="18sp"
        android:textColor="@color/login_form_details"
        android:padding="20dp"
        android:layout_below="@id/userNameForgot"
        android:gravity="center"/>

    <EditText
        android:id="@+id/petNameForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/enter_text_resource"
        android:inputType="text"
        android:padding="16dp"
        android:layout_margin="20dp"
        android:layout_below="@id/textForgot"
        android:textColor="@color/login_form_details"
        android:textColorHint="@color/login_form_details_medium"
        tools:ignore="Autofill" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pasword_resource"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_margin="20dp"
            android:layout_below="@id/petNameForgot"
            android:textColorHint="@color/login_form_details_medium"
            app:passwordToggleTint="@color/login_form_details"
            app:hintTextColor="@color/login_form_details"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_background"
            android:textColor="@color/login_form_details"
            />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogInForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/log_in_button_background"
        android:text="@string/confirm_resource"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:layout_below="@id/passwordInputLayout"
        android:textColor="@color/login_form_details_medium" />
    </RelativeLayout>

</ScrollView>