<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.loginActivity.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        style="@style/guideline_style.vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        style="@style/guideline_style.vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/username_resource"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/login_form_details"
        android:textColorHint="@color/login_form_details_medium"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline16"
        app:layout_constraintBottom_toTopOf="@id/guideline17"
        tools:ignore="Autofill" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_resource"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:textColorHint="@color/login_form_details_medium"
        app:passwordToggleTint="@color/login_form_details"
        app:hintTextColor="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline17">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_background"
            android:textColor="@color/login_form_details"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/log_in_button_background"
        android:text="@string/login_now_resource"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline18"
        />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password_resource"
        android:padding="10dp"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline15" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or_resource"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        style="@style/guideline_style.vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        style="@style/guideline_style.vertical"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/newAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account_register_here_resource"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.20"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.50"/>


</androidx.constraintlayout.widget.ConstraintLayout>